# django_work

./: pyproject.toml
html/: Catalog_page.html  Category_page.html  Contacts_page.html  app.py  main_page.html
