[tool.poetry]
name = "project-django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.2"
response = "^0.5.0"
django = "^5.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
